[project]
name = "ML-QBlackHole"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
  "matplotlib",
  "pandas",
  "scikit-learn"
]


[bild-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "standar"

include = [
  "src"
]

exclude = [
  "**/__pycache__",
  ".venv"
]

