[project]
name = "ML-QBlackHole"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.7.0",
  "seaborn>=0.13.2",
  "jupyterlab",
]


[bild-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "standar"

include = [
  "src"
]

exclude = [
  "**/__pycache__",
  ".venv"
]

